# fwxvi

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .pylintrc  CPPLINT.cfg  Dockerfile  LICENSE  README.md  SConstruct  ____main_____8py.html  ____main_____8py.js  accel__pedal_8h_source.html  adbms__afe_8h_source.html  adbms__afe__crc15_8h_source.html  adbms__afe__regs_8h_source.html  adc_8h_source.html  annotated.html  annotated_dup.js  app__terminal_8h_source.html  arena_8h_source.html  arm_2can__hw_8c.html  arm_2can__hw_8c.js  arm_2can__hw_8c__incl.map  arm_2can__hw_8c__incl.md5  arm_2flash_8c.html  arm_2flash_8c.js  arm_2flash_8c__incl.map  arm_2flash_8c__incl.md5  arm_2gpio_8c.html  arm_2gpio_8c.js  arm_2gpio_8c__incl.map  arm_2gpio_8c__incl.md5  arm_2gpio__interrupts_8c.html  arm_2gpio__interrupts_8c.js  arm_2gpio__interrupts_8c__incl.map  arm_2gpio__interrupts_8c__incl.md5  arm_2i2c_8c.html  arm_2i2c_8c.js  (+2723 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements.sh
.github/workflows/: deploy_doxygen.yml  main.yml  scons-format.yml  test.yml
autogen/: README.md  __main__.py  can_autogen.py  mpxe_test_autogen.py  new_project_autogen.py  test_autogen.py
can/boards/: bms_carrier.yaml  can_communication.yaml  centre_console.yaml  front_controller.yaml  imu.yaml  rear_controller.yaml  steering.yaml  telemetry.yaml
can/inc/: can.h  can_hw.h  can_msg.h  can_queue.h  can_watchdog.h
can/src/: can.c
can/tools/: can_explorer.py  can_simulator.py  can_simulator_cache.py  system_can.py  system_dbc.dbc
doxygen/: Doxyfile  doxygen-awesome-sidebar-only.css  main_page.md
hooks/: pre-commit
libraries/FATFs/: config.json
libraries/autogen/: autogen.py
libraries/core/: config.json
libraries/gui/: README.md  config.json
libraries/lvgl/: README.md  config.json  lv_conf.h  lv_version.h  lvgl.h
libraries/lvgl9/: README.md  config.json  lv_conf.h  lv_version.h  lvgl.h
libraries/master/: config.json
libraries/midFS/: config.json
libraries/ms-common/: config.json
libraries/ms-freertos/: config.json
libraries/ms-gui/: config.json
libraries/ms-mpxe/: config.json
libraries/ms_drivers/: README.md  config.json
mpxe/: command.md
mpxe/scripts/: main.py
mpxe/server/app/gui/: CMakeLists.txt  README.md  main.cc
mpxe/server/app/gui/inc/: TestThing.h  afe_page.h  dict_table_model.h  main_window.h  overview_page.h
mpxe/server/app/gui/models/inc/: adc_table_model.h  command_table_model.h  dict_table_model.h  gpio_table_model.h  voltage_table_model.h
mpxe/server/app/gui/models/src/: adc_table_model.cc  command_table_model.cc  dict_table_model.cc  gpio_table_model.cc  voltage_table_mode.cc  voltage_table_model.cc
mpxe/server/app/gui/src/: afe_page.cc  dict_table_model.cc  main.cc  main_window.cc  overview_page.cc
mpxe/server/app/gui/ui/inc/: adc_page.h  afe_page.h  can_page.h  can_table_model.h  gpio_page.h  main_window.h  overview_page.h
mpxe/server/app/gui/ui/src/: adc_page.cc  afe_page.cc  can_page.cc  can_table_model.cc  gpio_page.cc  main_window.cc  overview_page.cc
mpxe/server/app/gui/utils/inc/: gui_client_interface.h  json_watcher.h  utils.h
mpxe/server/app/gui/utils/src/: gui_client_interface.cc  json_watcher.cc  utils.cc
mpxe/test_scripts/: test1.yaml
platform/: README.md  arm.py  stm32l4-openocd.cfg  x86.py
platform/linker_scripts/: stm32l4_application.ld  stm32l4_bootloader.ld  stm32l4_default.ld
projects/FrontController_GUI/: CanDecoder.c
projects/blinky/: README.md  config.json
projects/bms_carrier/: config.json
projects/bms_carrier_1/: README.md
projects/bootloader/: config.json
projects/bootstrap/: README.md  config.json
projects/can_communication/: README.md  config.json
projects/centre_console/: README.md
projects/file_system/: README.md  config.json
projects/fota/: README.md  config.json
projects/front_controller/: README.md  config.json
projects/motor_controller/: README.md
projects/motor_sensor/: README.md  config.json
projects/pedal_calib/: README.md  config.json
projects/power_distribution/: README.md  config.json
projects/rear_controller/: README.md  config.json
projects/steering/: README.md  config.json
projects/telemetry/: config.json
py/file_formatter/: c_file_formatter.py  cstyle_file_formatter.py  formatter_config.py  formatter_utils.py  h_file_formatter.py  main.py  py_file_formatter.py  template_file_formatter.py
py/fota_validation/: __init__.py  fota_packet.py  fota_packet_sender.py  fota_rx.py  fota_tx.py  main.py  (+1 more)
scons/: build.scons  common.py  gui_build_tool.py  lint_format.scons  mpxe.scons  new_target.scons  pytest.scons  test.scons  vehicle_sim.scons
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+130 more)
simulation/: README.md  command.md
(+2682 files in other folders)
